--- a/线程.md
+++ b/线程.md
@@ -193,14 +193,14 @@ sleep()函数就是结束当前时间片，把自己挂起，进入等待队列,
 
 关于系统调用有两种方式：
 
-* 直接调用Linux系统函数  
-* 调用标准C库函数,为了实现某些功能，在Linux平台下标准C库函数会调用相关的系统函数
+* 直接调用Linux系统函数。
+* 调用标准C库函数,为了实现某些功能，在Linux平台下标准C库函数会调用相关的系统函数。
 
 ### 6.2 线程ID比较
 在Linux中线程ID本质就是一个无符号长整形，因此可以直接使用比较操作符比较两个线程的ID，但是线程库是可以跨平台使用的，在某些平台上 pthread_t可能不是一个单纯的整形，这中情况下比较两个线程的ID必须要使用比较函数，函数原型如下： 
  
 	int pthread_equal(pthread_t t1, pthread_t t2);
-
+ 
 
 
 
